--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Happy Birthday!!! :)</title>
+  <title>Happy Birthday Guglii :)</title>
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400" rel="stylesheet">
   <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
   <link rel="stylesheet" href="style/style.css">
@@ -14,27 +14,27 @@
 <body>
   <div class="container">
     <div class="one">
-      <h1 class="one">Hey
-        <span id="name">Lydia</span>
+      <h1 class="one">Helloo ji
+        <span id="name">BBBBBBB ji</span>
       </h1>
-      <p class="two" id="greetingText">I really like your name btw!</p>
+      <p class="two" id="greetingText">The day has come when kudi landed on earth.</p>
     </div>
     <div class="three">
       <p>It's your birthday!!! :D</p>
     </div>
     <div class="four">
       <div class="text-box">
-        <p class="hbd-chatbox">Happy birthday to you!! Yeee! Many many happy blah...</p>
+        <p class="hbd-chatbox">I am so grateful to have you in my life love</p>
         <p class="fake-btn">Send</p>
       </div>
     </div>
     <div class="five">
-      <p class="idea-1">That's what I was going to do.</p>
-      <p class="idea-2">But then I stopped.</p>
-      <p class="idea-3">I realised, I wanted to do something
-        <strong>special</strong>.</p>
-      <p class="idea-4">Because,</p>
-      <p class="idea-5">You are Special
+      <p class="idea-1">If anything the world matters to me</p>
+      <p class="idea-2">Anything I care about</p>
+      <p class="idea-3">It's Allll
+        <strong>YOU</strong>.</p>
+      <p class="idea-4">Happy Birthday Gugu</p>
+      <p class="idea-5">You are Special 
         <span>:)</span>
       </p>
       <p class="idea-6">
@@ -47,7 +47,7 @@
       <img src="img/hat.svg" alt="" class="hat">
       <div class="wish">
         <h3 class="wish-hbd">Happy Birthday!</h3>
-        <h5 id="wishText">May the js.prototypes always be with you! ;)</h5>
+        <h5 id="wishText">Mummy papaji nal fun karo jii!! Mauhh</h5>
       </div>
     </div>
     <div class="seven">
