--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
       </div>
     </div>
     <div class="five">
-      <p class="idea-1">If anything the world matters to me</p>
+      <p class="idea-1">If anything in the world matters to me</p>
       <p class="idea-2">Anything I care about</p>
       <p class="idea-3">It's Allll
         <strong>YOU</strong>.</p>
-      <p class="idea-4">Happy Birthday Gugu</p>
-      <p class="idea-5">You are Special 
+      <p class="idea-4">Happy Birthday Gugu ❤ ❤</p>
+      <p class="idea-5">Sending tons of Love
         <span>:)</span>
       </p>
       <p class="idea-6">
@@ -46,8 +46,8 @@
       <img src="img/Shelly.jpeg" alt="" class="lydia-dp" id="imagePath">
       <img src="img/hat.svg" alt="" class="hat">
       <div class="wish">
-        <h3 class="wish-hbd">Happy Birthday!</h3>
-        <h5 id="wishText">Mummy papaji nal fun karo jii!! Mauhh</h5>
+        <h3 class="wish-hbd">Once again Happy Birthday Pyaru!</h3>
+        <h5 id="wishText">Mummy papaji and kokkam nal fun karo jii!!</h5>
       </div>
     </div>
     <div class="seven">
