--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
       <p class="idea-2">Anything I care about</p>
       <p class="idea-3">It's Allll
         <strong>YOU</strong>.</p>
-      <p class="idea-4">Happy Birthday Gugu ❤ ❤</p>
+      <p class="idea-4">Happy Birthday Gugu !!!LOVE!!LOVE</p>
       <p class="idea-5">Sending tons of Love
         <span>:)</span>
       </p>
       <p class="idea-6">
-        <span>S</span>
-        <span>O</span>
+        <span>XO</span>
+        <span>XO</span>
       </p>
     </div>
     <div class="six">
