--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div class="container">
     <div class="one">
-      <h1 class="one">Helloo ji
+      <h1 class="one">Hii
         <span id="name">BBBBBBB ji</span>
       </h1>
       <p class="two" id="greetingText">The day has come when kudi landed on earth.</p>
