--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <img src="img/Shelly.jpeg" alt="" class="lydia-dp" id="imagePath">
       <img src="img/hat.svg" alt="" class="hat">
       <div class="wish">
-        <h3 class="wish-hbd">Once again Happy Birthday Pyaru!</h3>
+        <h3 class="wish-hbd">Happy Birthday Pyaru!</h3>
         <h5 id="wishText">Mummy papaji and kokkam nal fun karo jii!!</h5>
       </div>
     </div>
